iniciada a criação do site e configuração da pág. inicial

--- a/site1/application/views/index.html
+++ b/site1/application/views/index.html
@@ -1,11 +1,58 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>403 Forbidden</title>
-</head>
-<body>
+<div class="linha">
+    <section>
+        <div class="coluna col3 sidebar">
+            <h3>clientes satisfeitos</h3>
+            <ul class="sem marcador sem padding">
+                <li><a href="">nome da empresa 1</a></li>
+                <li><a href="">nome da empresa 2</a></li>
+                <li><a href="">nome da empresa 3</a></li>
+                <li><a href="">nome da empresa 4</a></li>
+                <li><a href="">nome da empresa 5</a></li>
+                <li><a href="">nome da empresa 6</a></li>
+                <li><a href="">nome da empresa 7</a></li>
+            </ul>
+            <a href="clientes.html" class="">ver todos &raquo;</a>
+        </div>
+        <div class="coluna col9">
+            <h2>Ultimo trabalho: <em>Empresa ABC</em></h2>
+            <img src="imagens/thumb-grande.jpg" alt=""/>
+            <p>paragrafo aleatorio</p>
+            <a href="clientes.html" class="botao">ver outros trabalhos &raquo;</a>
+        </div>
+    </section>
+</div>
+<div class="conteudo-extra">
+    <div class="linha">
+        <div class="coluna col7">
+            <section>
+                <h2>como um site pode ajudar a sua empresa</h2>
+                <p>paragrafo aleatorio</p>
+                <P>pararafo aleatorio</P>
+                <p>paragrafo aleatorio</p>
+            </section>
+        </div>
+        <div class="coluna col5">
+            <h3>ultimas noticias</h3>
+            <ul class="sem marcador sem padding noticias">
+                <li>
+                    <img src="imagens/thumb-pequena.jpg" alt=""/>
+                    <h4>titulo da noticia</h4>
+                    <p>outro paragrafo aleatorio <a href="">leia mais &raquo;</a></p>
+                </li>
 
-<p>Directory access is forbidden.</p>
+                <li>
+                    <img src="imagens/thumb-pequena.jpg" alt=""/>
+                    <h4>titulo da noticia</h4>
+                    <p>outro paragrafo aleatorio <a href="">leia mais &raquo;</a></p>
+                </li>
 
-</body>
-</html>
+                <li>
+                    <img src="imagens/thumb-pequena.jpg" alt=""/>
+                    <h4>titulo da noticia</h4>
+                    <p>outro paragrafo aleatorio <a href="">leia mais &raquo;</a></p>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+</div>
