inserção e listagem de notícias

--- a/site1/assets/css/painel.css
+++ b/site1/assets/css/painel.css
@@ -38,3 +38,18 @@ input.botao {
 .login {
 	margin-top: 150px;
 }
+table {
+	width: 100%;
+	font-size: 18px;
+}
+table td {
+	padding: 10px 0;
+}
+table tbody tr:hover{
+	background: #f1f2ea;
+	color: #727272;
+}
+img.thumb-edicao{
+	width: 200px;
+	height: auto;
+}
